# Multimodal-Video-Query-Processing

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: data_qvh.yaml  data_tvr.yaml  inference.yaml  retrieval.yaml  router_train.yaml
models/: README.md
scripts/: build_retrieval_index.sh  download_models.sh  evaluate.sh  prepare_data.sh  retrieve_candidates.sh  run_inference.sh  train_router.sh
src/clipplan/: __init__.py
src/clipplan/api/: __init__.py  qianfan.py  scorer.py
src/clipplan/data/: __init__.py  adapters.py  extract_frames.py  prepare.py  schema.py
src/clipplan/evaluation/: __init__.py  evaluate.py  metrics.py
src/clipplan/inference/: __init__.py  run.py
src/clipplan/retrieval/: __init__.py  ann.py  build_hybrid_candidates.py  build_multigrain_index.py  dataset.py  encoders.py  merge_multigrain_index.py  proposals.py  retrieve_candidates.py  schema.py
src/clipplan/router/: __init__.py  common.py  critic.py  data.py  env.py  logging.py  metrics.py  policy.py  prompting.py  train.py
tests/: test_imports.py  test_metrics.py  test_qianfan_config.py  test_router_actions.py  test_rrf.py
