[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipplan"
version = "0.1.0"
description = "Budget-aware video corpus retrieval with counterfactual policy optimization."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "ClipPlan Authors"}]
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30",
  "hnswlib>=0.8",
  "numpy>=1.24",
  "Pillow>=10",
  "PyYAML>=6",
  "qwen-vl-utils>=0.0.8",
  "requests>=2.31",
  "torch>=2.2",
  "transformers>=4.51",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
clipplan-prepare = "clipplan.data.prepare:main"
clipplan-build-index = "clipplan.retrieval.build_multigrain_index:main"
clipplan-retrieve = "clipplan.retrieval.retrieve_candidates:main"
clipplan-train = "clipplan.router.train:main"
clipplan-infer = "clipplan.inference.run:main"
clipplan-evaluate = "clipplan.evaluation.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
